--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="swiper-slide"><img src="images/free/36.jpeg"/></div>
             <div class="swiper-slide"><img src="images/free/48.jpeg"/></div> 
             <div class="swiper-slide"><img src="images/free/88.jpeg"/></div>
-            <div class="swiper-slide"><a href="https://play.google.com/store/apps/details?id=com.elbowroomstudios.hoylarious#?t=W251bGwsMSwxLDIxMiwiY29tLmVsYm93cm9vbXN0dWRpb3MuaG95bGFyaW91cyJd" target="_blank"><img src="images/free/upgrade.jpg"/></a></div>
+            <div class="swiper-slide"><a href="http://market.android.com/details?id=com.elbowroomstudios.hoylarious" rel="external"><img src="images/free/upgrade.jpg"/></a></div>
           </div>
         </div>
         <div class="home"><a href="#home" class="goback"><img src="images/home.png"/></a></div>
