--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/swipe.css" /> 
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-        <script type="text/javascript" src="phonegap.js"></script>
+        <!-- // <script type="text/javascript" src="phonegap.js"></script> -->
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jqtouch-jquery.min.js"></script>
         <script type="text/javascript" src="js/jqtouch.min.js"></script>
@@ -53,7 +53,9 @@
             <div class="swiper-slide"><img src="images/free/36.jpeg"/></div>
             <div class="swiper-slide"><img src="images/free/48.jpeg"/></div> 
             <div class="swiper-slide"><img src="images/free/88.jpeg"/></div>
-            <div class="swiper-slide"><a href="" id="buy"></a><img src="images/free/upgrade.jpg"/></div>
+            <div class="swiper-slide buy">
+              <img src="images/free/upgrade.jpg"/>
+            </div>
           </div>
         </div>
         <div class="home"><a href="#home" class="goback"><img src="images/home.png"/></a></div>
