--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/swipe.css" /> 
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-        <!-- // <script type="text/javascript" src="phonegap.js"></script> -->
+        <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/jqtouch-jquery.min.js"></script>
         <script type="text/javascript" src="js/jqtouch.min.js"></script>
