--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             <div class="swiper-slide"><img src="images/free/36.jpeg"/></div>
             <div class="swiper-slide"><img src="images/free/48.jpeg"/></div> 
             <div class="swiper-slide"><img src="images/free/88.jpeg"/></div>
-            <div class="swiper-slide buy">
+            <div id="buy" class="swiper-slide">
               <img src="images/free/upgrade.jpg"/>
             </div>
           </div>
         </div>
         <div class="home"><a href="#home" class="goback"><img src="images/home.png"/></a></div>
+        <div class="buy"><a href="#">BUY</a></div>
       </div>
     </body>
 </html>
