--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="home"><a href="#home" class="goback"><img src="images/home.png"/></a></div>
-        <div class="buy"><a href="#">BUY</a></div>
+        <div class="buy">BUY</div>
       </div>
     </body>
 </html>
