--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="home"><a href="#home" class="goback"><img src="images/home.png"/></a></div>
-        <div class="buy">BUY</div>
+        <div class="buy"><a href='market://details?id=com.elbowroomstudios.hoylarious' rel="external">BUY</a></div>
       </div>
     </body>
 </html>
