--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="swiper-slide"><img src="images/free/48.jpeg"/></div> 
             <div class="swiper-slide"><img src="images/free/88.jpeg"/></div>
             <div class="swiper-slide">
-              <a href='http://market.android.com/details?id=com.elbowroomstudios.hoylarious' rel="external"><img src="images/free/upgrade.jpg"/></a>
+              <a href='market://details?id=com.elbowroomstudios.hoylarious' target="_blank" rel="external"><img src="images/free/upgrade.jpg"/></a>
             </div>
           </div>
         </div>
